
0.9.9h Feb 09, 2005
 * added search_transaction_by_pkg() to make checks more specific
 * remove package by name-version now possible
 * updated example.slapt-getrc to point to 10.1 sources
 * make sure all dependencies for slapt-get are satisfied during dist-upgrade
 * ensure when removing a package and the packages it requires, the packages
   that are required are installed. thanks NIkkou (nibbana80 at wp dot pl)
 * improved version comparing
 * fixed bug when specifying specific versions of dependencies, thanks NIkkou
    (nibbana80 at wp dot pl)
 * simplified add_deps_to_trans()
 * updated sources in example.slapt-getrc (thanks Piotr Simon)
 * Makefile updates to symlink libslapt-$(VERSION).a to libslapt.a
 * documentation updates

0.9.9g Jan 30, 2005
 * fixed bug in search, installed packages did not show up when searching by
   package location
 * changed order of transaction, removes now happen first in case files in the
   packages to be removed are shared with those packages about to be installed
   or upgraded.
 * ensure that package removal doesn't happen when --download-only is specified
 * updated documentation
 * transaction report now reports sizes in kB or in MB
 * added check before downloading any packages that there is enough disk 
   space to accomodate both downloads and installed pkgs
 * added aaa_elflibs to the default exclude
 * fixed required_by() function for deep leveled recursive dependencies
 * moved package order so that package always follows it's dependencies
 * exclude suggestions from transaction report if they are already present in
   current transaction
 * fixed --no-dep bug that was excluding the requested package instead of
   installing it
 * fixed recursive dependency bug
 * upped the max size of package requires, suggests token can be ' ' or ',' now
 * moved exclude check for installed version of package about to be updated
   so that packages that where not being upgraded wouldn't show up excluded