@@ -37,9 +37,6 @@
 #define MIRROR_LEN 200
 #define LOCATION_LEN 50
 #define DESCRIPTION_LEN 1024
-#define REQUIRED_LEN 3072
-#define CONFLICTS_LEN 2048
-#define SUGGESTS_LEN 2048
 #define MD5_STR_LEN 34
 #define MD5_CHECKSUM_FAILED -100
 #define PKG_LIST "PACKAGES.TXT"
